[COM_CITATIONS] Change component to use Relational classes instead of JTable objects.

--- a/core/components/com_citations/admin/language/en-GB/en-GB.com_citations.ini
+++ b/core/components/com_citations/admin/language/en-GB/en-GB.com_citations.ini
@@ -9,8 +9,8 @@ COM_CITATIONS_CONFIGURATION="Citations Configuration"
 
 CITATION="Citation"
 CITATIONS="Citations"
-CITATION_SAVED="Citation successfully Saved"
-CITATION_REMOVED="Citation successfully Removed"
+CITATION_SAVED="Citation %s Successfully Saved"
+CITATION_REMOVED="Citation %s Successfully Removed"
 CITATION_PUBLISHED="Citation successfully published"
 CITATION_UNPUBLISHED="Citation successfully unpublished"
 NO_SELECTION="No citation selected"
