--- a/core/components/com_citations/site/language/en-GB/en-GB.com_citations.ini
+++ b/core/components/com_citations/site/language/en-GB/en-GB.com_citations.ini
@@ -238,6 +238,7 @@ COM_CITATIONS_TAGS_HINT="Enter tags separated by commas (e.g. negf theory, ion t
 COM_CITATIONS_BADGES_HINT="Enter badges separated by commas (e.g.evidence-based, peer-reviewed)."
 COM_CITATIONS_ASSOCIATION_DESC="Please enter all the resources the work references."
 COM_CITATIONS_SAVE="Save"
+COM_CITATIONS_CITATION_DELETE="Successfully deleted citation %s."
 
 ; Singe Citation View
 COM_CITATIONS_BY="By"
