[APP/COM_PARTNERS] new file structure for admin

--- a/admin/language/en-GB/en-GB.com_partner.ini
+++ b/admin/language/en-GB/en-GB.com_partner.ini
@@ -1,7 +1,7 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
 COM_PARTNERS="Partners"
-
+COM_PARTNERS_PARTNER_TYPES = "Partner Types"
 
 COM_PARTNERS_CONFIGURATION="Partners Configuration"
 
