[APP/COM_PARTNERS] current state of program for drew to look at

--- a/admin/language/en-GB/en-GB.com_partner.ini
+++ b/admin/language/en-GB/en-GB.com_partner.ini
@@ -15,12 +15,15 @@ COM_PARTNERS_COL_ID="ID"
 COM_PARTNERS_COL_ABOUT="About"
 COM_PARTNERS_COL_STATE="State"
 COM_PARTNERS_COL_DATE_JOINED="Date Joined"
-COM_PARTNERS_COL_QUPARTNERSBES_GROUP="QUBES group"
+COM_PARTNERS_COL_QUBES_GROUP="QUBES group"
 COM_PARTNERS_COL_LOGO_URL="Logo(URL)"
 COM_PARTNERS_COL_NAME="NAME"
-COM_PARTNERS_COL_PARTNER="Partner Type"
+COM_PARTNERS_COL_PARTNER_TYPE="Partner Type"
 COM_PARTNERS_COL_LINK="Link(URL)"
-COM_PARTNERS_COL_SOCIAL_MEDIA="Social Media Link(URL) "
+COM_PARTNERS_COL_SOCIAL_MEDIA="Social Media Link(URL)"
+COM_PARTNERS_COL_QUBES_LIASON = "QUBES liason";
+COM_PARTNERS_COL_PARTNER_LIASON = "Partner liason";
+COM_PARTNERS_COL_ACTIVITIES = "Activities";
 
 
 ; Entry Fields
@@ -32,8 +35,10 @@ COM_PARTNERS_FIELD_PARTNER TYPE="PARTNER TYPE"
 COM_PARTNERS_FIELD_ID="ID"
 COM_PARTNERS_FIELD_LINK="Link(URL)"
 COM_PARTNERS_FIELD_LOGO="Logo(URL)"
-COM_PARTNERS_FIELD_SOCIAL_MEDIA="Social Media(URL)"
-
+COM_PARTNERS_FIELD_SOCIAL_MEDIA="Social Media(URL)";
+COM_PARTNERS_FIELD_QUBES_LIASON = "QUBES liason";
+COM_PARTNERS_FIELD_PARTNER_LIASON = "Partner liason";
+COM_PARTNERS_FIELD_ACTIVITIES = "Activities";
 
 ; Messages
 COM_PARTNERS_ERROR_MISSING_NAME="Please provide a name."
