[PURR][#1414]The sidebar text in the project setup process is updated

--- a/core/components/com_projects/site/language/en-GB/en-GB.com_projects.ini
+++ b/core/components/com_projects/site/language/en-GB/en-GB.com_projects.ini
@@ -192,7 +192,8 @@ COM_PROJECTS_CONTENT_PUBLICATION="Content publication"
 COM_PROJECTS_SETUP_ONE_LAST_THING="One last thing..."
 COM_PROJECTS_SETUP_TERMS_PRIVACY_RULE="What data is considered sensitive or restricted?"
 COM_PROJECTS_SETUP_TERMS_PRIVACY_RULE_EXPLAIN="Sensitive data can include personal, financial, and legal information, as well as information protected by state or federal laws and by university policy. Federally-protected restricted data include all individually identifiable health information (HIPAA-protected information), student records and grades (FERPA-protected information)."
-
+COM_PROJECTS_SETUP_TERMS_PRIVACY_RULE_HRPP="Not sure if your research involves human subjects or needs IRB approval? Contact the "
+COM_PROJECTS_SETUP_TERMS_HRPP="Human Research Protection Program (HRPP)"
 COM_PROJECTS_SETUP_BEFORE_COMPLETE="Just one more thing before you get started..."
 COM_PROJECTS_SETUP_TERMS_WHY_ASK="Because your project may involve data sharing, we need to make sure you understand and acknowledge some important Privacy terms. This is particularly vital if you work with sensitive data such as health or student records."
 COM_PROJECTS_SETUP_TERMS_QUESTION_AGREE="Did you read and agree to the"
@@ -200,7 +201,7 @@ COM_PROJECTS_SETUP_TERMS_QUESTION_AGREE_PROJECT="as they relate to the use of th
 COM_PROJECTS_SETUP_TERMS_ALL_MEMBERS="all project members"
 COM_PROJECTS_SETUP_TERMS="Privacy Terms"
 COM_PROJECTS_SETUP_TERMS_AGREE="Yes, I read, understand and acknowledge"
-COM_PROJECTS_SETUP_TERMS_QUESTION_PHI="Are you planning to upload datasets containing any sensitive or restricted data?"
+COM_PROJECTS_SETUP_TERMS_QUESTION_PHI="Are you planning to upload datasets containing any sensitive or restricted data (e.g. human subjects data, HIPAA or FERPA protected data, or export controlled data)?"
 COM_PROJECTS_SETUP_TERMS_QUESTION_PHI_YES="Yes, this project may involve uploading sensitive or restricted data."
 COM_PROJECTS_SETUP_TERMS_QUESTION_PHI_NO="No, this project will not involve any forms of sensitive or restricted data."
 COM_PROJECTS_SETUP_TERMS_QUESTION_PHI_YES_NOT_SURE="Yes, this project may involve uploading sensitive or restricted data, or I'm not sure what this means."
@@ -208,7 +209,7 @@ COM_PROJECTS_SETUP_TERMS_QUESTION_PHI_MAYBE="Maybe: I'm not sure yet, or I'm not
 COM_PROJECTS_SETUP_TERMS_PROJECT_WILL_INVOLVE="This project will involve"
 COM_PROJECTS_SETUP_TERMS_PROJECT_DATA="data"
 COM_PROJECTS_SETUP_TERMS_PROJECT_WILL_INVOLVE_EXPORT_CONTROLLED="This project may involve government-restricted, export-controlled, or proprietary company information (without permission)."
-COM_PROJECTS_SETUP_TERMS_PROJECT_WILL_INVOLVE_IRB="This project may involve data that is governed by an Institutional Review Board (IRB) Approval Protocol."
+COM_PROJECTS_SETUP_TERMS_PROJECT_WILL_INVOLVE_IRB="This project may involve human subjects data."
 COM_PROJECTS_SETUP_TERMS_PROJECT_WILL_INVOLVE_HIPAA="This project may involve HIPAA data or Protected Health Information."
 COM_PROJECTS_SETUP_TERMS_PROJECT_WILL_INVOLVE_FERPA="This project may involve FERPA data or student records."
 COM_PROJECTS_SETUP_TERMS_LAWS="laws"
@@ -223,7 +224,7 @@ COM_PROJECTS_SETUP_IRB="IRB"
 COM_PROJECTS_SETUP_TERMS_RESTRICTED_STOP_EXPORT="STOP! This site cannot be used to store government restricted, export-controlled, or proprietary company data (without permission)."
 COM_PROJECTS_SETUP_TERMS_RESTRICTED_STOP_HIPAA="STOP! This site cannot be used to store HIPAA protected health information (PHI)."
 COM_PROJECTS_SETUP_TERMS_RESTRICTED_MUST_ACKNOWLEDGE="You must read and acknowledge to continue:"
-COM_PROJECTS_SETUP_TERMS_RESTRICTED_STOP_IRB="Institutional Review Board (IRB) approvals have been received, and I take responsibility for ensuring compliance with legal requirements for all project members."
+COM_PROJECTS_SETUP_TERMS_RESTRICTED_STOP_IRB="Human subjects research is governed by the Institutional Review Board (IRB). IRB approvals have been received, and I take responsibility for ensuring compliance with legal requirements for all project members."
 COM_PROJECTS_SETUP_TERMS_RESTRICTED_STOP_IRB_AGREE="Yes, I read, understand and acknowledge the IRB Statement."
 COM_PROJECTS_SETUP_TERMS_RESTRICTED_STOP_FERPA_AGREE="Yes, I read, understand and acknowledge my project will be suspended until it has been reviewed."
 COM_PROJECTS_SETUP_TERMS_RESTRICTED_STOP_FERPA="Projects that may include data that are restricted by FERPA regulations must be reviewed by the appropriate University staff before proceeding. Your project will be temporarily suspended while it is being reviewed. You will be contacted by e-mail within 2-3 business days, and you will be able to continue with your project after it has been reviewed for FERPA compliance and approved."
