[COM_MEMBERS] Minor adjustments to make wording and styles more consistent

--- a/core/components/com_members/site/language/en-GB/en-GB.com_members.ini
+++ b/core/components/com_members/site/language/en-GB/en-GB.com_members.ini
@@ -342,7 +342,7 @@ COM_MEMBERS_REGISTER_TERMS_AND_CONDITIONS="Terms & Conditions"
 ; -- Fields
 COM_MEMBERS_REGISTER_PASSWORD="Password"
 COM_MEMBERS_REGISTER_CONFIRM_PASSWORD="Confirm Password"
-COM_MEMBERS_REGISTER_USER_LOGIN="User Login"
+COM_MEMBERS_REGISTER_USER_LOGIN="Username"
 COM_MEMBERS_REGISTER_CONTACT_INFORMATION="Contact Information"
 COM_MEMBERS_REGISTER_FIRST_NAME="First Name"
 COM_MEMBERS_REGISTER_MIDDLE_NAME="Middle Name"
