[PURR][#1414]Sidebar text in project creation process and publication submission process are updated

--- a/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
+++ b/core/plugins/projects/publications/language/en-GB/en-GB.plg_projects_publications.ini
@@ -772,9 +772,10 @@ PLG_PROJECTS_PUBLICATIONS_AUTHORS_AUTHOR_LAST_NAME="Last name"
 PLG_PROJECTS_PUBLICATIONS_AUTHORS_AUTHOR_EMAIL="Email"
 PLG_PROJECTS_PUBLICATIONS_AUTHORS_EDIT_UNCONFIRMED_TIPS="*Name and institution fields are required. You may also provide an email address and send out an invitation to register and join the publication team."
 PLG_PROJECTS_PUBLICATIONS_AUTHORS_NO_NAME="no name"
+PLG_PROJECTS_PUBLICATIONS_AUTHORS_PROMPT_NAME="* First name, middle initial, last name."
 PLG_PROJECTS_PUBLICATIONS_SUBMITTER="Submitter"
 PLG_PROJECTS_PUBLICATIONS_SUBMITTER_ABOUT="Submitter info is shown on publication page, separately from author list"
-PLG_PROJECTS_PUBLICATIONS_AUTHORS_REQUIRED_FIELDS="* Fields marks with asterisk are required"
+PLG_PROJECTS_PUBLICATIONS_AUTHORS_REQUIRED_FIELDS="* Fields marks with asterisk are required, and full name of the institution is standard"
 
 PLG_PROJECTS_PUBLICATIONS_EMAIL_CURATORS="Publication curator update"
 PLG_PROJECTS_PUBLICATIONS_EMAIL_CURATORS_REVIEW="To review submitted publication, go to"
@@ -906,6 +907,10 @@ PLG_PROJECTS_PUBLICATIONS_TAGS_SAVED="Tags successfully saved."
 PLG_PROJECTS_PUBLICATIONS_TAGS_SELECT="Select tags from suggested, or add your own on the right:"
 PLG_PROJECTS_PUBLICATIONS_PUB_INFO_TAGS="Tags help users find your publication. Before adding your own tags,    try finding good matches in existing tag library."
 PLG_PROJECTS_PUBLICATIONS_PUBLICATION_TAGS="Publication Tags"
+PLG_PROJECTS_PUBLICATIONS_PUBLICATION_TAGS_SUGGESTIONS="* Start typing to see suggestions of tags already in use"
+PLG_PROJECTS_PUBLICATIONS_PUBLICATION_TAGS_BROAD_SPECIFIC="* Use a mix of broad and specific tags"
+PLG_PROJECTS_PUBLICATIONS_PUBLICATION_TAGS_STANDARD="* View standard subject tags "
+PLG_PROJECTS_PUBLICATIONS_PUBLICATION_TAGS_HERE="here"
 PLG_PROJECTS_PUBLICATIONS_NO_TAGS_SELECTED_CLICK="No tags selected. Click on items to the left to add."
 PLG_PROJECTS_PUBLICATIONS_TAGS_ERROR_NO_PUBLICATION="Error retrieving publication information. Ajax got confused."
 PLG_PROJECTS_PUBLICATIONS_TAGS_SUGGESTED="Suggested:"
