--- a/core/plugins/projects/team/language/en-GB/en-GB.plg_projects_team.ini
+++ b/core/plugins/projects/team/language/en-GB/en-GB.plg_projects_team.ini
@@ -51,6 +51,9 @@ PLG_PROJECTS_TEAM_AUTHORS_EDIT_UNCONFIRMED_TIPS="Name and institution fields are
 PLG_PROJECTS_TEAM_SELECTOR_AUTHOR_UNCONFIRMED="unconfirmed"
 PLG_PROJECTS_TEAM_SELECTOR_LOOK_UP_BY_ID="Look up author by name (optional)"
 PLG_PROJECTS_TEAM_SELECTOR_HINT="*Name and organization fields are required"
+PLG_PROJECTS_TEAM_SELECTOR_NAME="*Non-roman names may be "
+PLG_PROJECTS_TEAM_SELECTOR_NAME_TRANSLITERATED="transliterated"
+PLG_PROJECTS_TEAM_SELECTOR_INSTITUTION="*Full name of the institution is standard"
 
 PLG_PROJECTS_TEAM_SELECTOR_USERID="User ID"
 PLG_PROJECTS_TEAM_SELECTOR_AUTHOR_NOT_PART_OF_TEAM="Author not part of project team yet?"
