--- a/admin/language/en-GB/en-GB.com_partners.ini
+++ b/admin/language/en-GB/en-GB.com_partners.ini
@@ -1,5 +1,5 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
-
+;the naming style is just a convention, not a requirement!, com =components, partners=name of components, col= column
 COM_PARTNERS="Partners"
 COM_PARTNERS_PARTNER_TYPES = "Partner Types"
 
