[APP/COM_PARTNERS] fixing issue #14, fields that are required are now required, although it is pretty basic, just making sure they arent blank

--- a/admin/language/en-GB/en-GB.com_partners.ini
+++ b/admin/language/en-GB/en-GB.com_partners.ini
@@ -49,7 +49,7 @@ COM_PARTNERS_FIELD_EXTERNAL_NAME =  "External Name"
 COM_PARTNERS_FIELD_DESCRIPTION = "Description";
 
 ; Messages
-COM_PARTNERS_ERROR_MISSING_NAME="Please provide a name."
+COM_PARTNERS_ERROR_MISSING_FIELDS="Please fill out all required fields."
 COM_PARTNERS_ENTRY_SAVED="Item successfully saved."
 COM_PARTNERS_ENTRIES_DELETED="Item(s) successfully removed."
 COM_PARTNERS_SELECT_ENTRY_TO="Please select one or more items to %s"
