--- a/admin/language/en-GB/en-GB.com_partners.ini
+++ b/admin/language/en-GB/en-GB.com_partners.ini
@@ -15,7 +15,7 @@ COM_PARTNERS_COL_ID="ID"
 COM_PARTNERS_COL_ABOUT="About"
 COM_PARTNERS_COL_STATE="State"
 COM_PARTNERS_COL_DATE_JOINED="Date Joined"
-COM_PARTNERS_COL_QUBES_GROUP="QUBES group"
+COM_PARTNERS_COL_GROUP_CN="Group CN"
 COM_PARTNERS_COL_LOGO_URL="Logo(URL)"
 COM_PARTNERS_COL_NAME="NAME"
 COM_PARTNERS_COL_PARTNER_TYPE="Partner Type"
@@ -38,11 +38,12 @@ COM_PARTNERS_FIELD_PARTNER_TYPE="Partner Type"
 COM_PARTNERS_FIELD_ID="ID"
 COM_PARTNERS_FIELD_LINK="Link(URL)"
 COM_PARTNERS_FIELD_LOGO="Logo(URL)"
-COM_PARTNERS_FIELD_QUBES_GROUP = "QUBES group(URL)"
+COM_PARTNERS_FIELD_GROUP_CN = "Group CN"
 COM_PARTNERS_FIELD_SOCIAL_MEDIA="Social Media(URL)";
 COM_PARTNERS_FIELD_QUBES_LIASON = "QUBES liason";
 COM_PARTNERS_FIELD_PARTNER_LIASON = "Partner liason";
 COM_PARTNERS_FIELD_ACTIVITIES = "Activities";
+COM_PARTNERS_SELECT = "Select";
 
 COM_PARTNERS_FIELD_INTERNAL_NAME = "Internal Name";	
 COM_PARTNERS_FIELD_EXTERNAL_NAME =  "External Name"
