--- a/core/components/com_publications/admin/language/en-GB/en-GB.com_publications.ini
+++ b/core/components/com_publications/admin/language/en-GB/en-GB.com_publications.ini
@@ -578,7 +578,11 @@ COM_PUBLICATIONS_CONFIG_RATING_DESC="Show/Hide the rating"
 COM_PUBLICATIONS_CONFIG_RATING="Rating"
 COM_PUBLICATIONS_CONFIG_DATE="Date"
 COM_PUBLICATIONS_CONFIG_DATE_DESC="Show/Hide publication date on publication page"
+COM_PUBLICATIONS_CONFIG_NOTES="Notes"
+COM_PUBLICATIONS_CONFIG_NOTES_DESC="Show/Hide publication release notes on publication page"
 COM_PUBLICATIONS_CONFIG_PUBLISHED="Published"
+COM_PUBLICATIONS_CONFIG_TAGS="Tags"
+COM_PUBLICATIONS_CONFIG_TAGS_DESC="Show/Hide publication tags on publication page"
 COM_PUBLICATIONS_SHOW_CITATION_LABEL="Citation"
 COM_PUBLICATIONS_SHOW_CITATION_DESC="Show example/instructions for citing this publications"
 COM_PUBLICATIONS_SHOW_CITATION_HIDE="Hide All"
