[APP/COM_PARTNERS] twitter handle

--- a/admin/language/en-GB/en-GB.com_partners.ini
+++ b/admin/language/en-GB/en-GB.com_partners.ini
@@ -20,7 +20,7 @@ COM_PARTNERS_COL_LOGO_URL="Logo(URL)"
 COM_PARTNERS_COL_NAME="NAME"
 COM_PARTNERS_COL_PARTNER_TYPE="Partner Type"
 COM_PARTNERS_COL_LINK="Link(URL)"
-COM_PARTNERS_COL_SOCIAL_MEDIA="Social Media Link(URL)"
+COM_PARTNERS_COL_TWITTER_HANDLE="Twitter Handle"
 COM_PARTNERS_COL_QUBES_LIASON = "QUBES liason";
 COM_PARTNERS_COL_PARTNER_LIASON = "Partner liason";
 COM_PARTNERS_COL_ACTIVITIES = "Activities";
@@ -39,7 +39,7 @@ COM_PARTNERS_FIELD_ID="ID"
 COM_PARTNERS_FIELD_LINK="Link(URL)"
 COM_PARTNERS_FIELD_LOGO="Logo(URL)"
 COM_PARTNERS_FIELD_GROUP_CN = "Group CN"
-COM_PARTNERS_FIELD_SOCIAL_MEDIA="Social Media(URL)";
+COM_PARTNERS_FIELD_TWITTER_HANDLE="Twitter Handle";
 COM_PARTNERS_FIELD_QUBES_LIASON = "QUBES liason";
 COM_PARTNERS_FIELD_PARTNER_LIASON = "Partner liason";
 COM_PARTNERS_FIELD_ACTIVITIES = "Activities";
