--- a/core/components/com_content/admin/language/en-GB/en-GB.com_content.ini
+++ b/core/components/com_content/admin/language/en-GB/en-GB.com_content.ini
@@ -4,6 +4,8 @@
 ; Note : All ini files need to be saved as UTF-8
 
 COM_CONTENT="Articles"
+COM_CONTENT_ARTICLES="Articles"
+COM_CONTENT_ARTICLE="Article"
 COM_CONTENT_ACCESS_DELETE_DESC="New setting for <strong>delete actions</strong> on this article and the calculated setting based on the parent category and group permissions."
 COM_CONTENT_ACCESS_EDIT_DESC="New setting for <strong>edit actions</strong> on this article and the calculated setting based on the parent category and group permissions."
 COM_CONTENT_ACCESS_EDITSTATE_DESC="New setting for <strong>edit state actions</strong> on this article and the calculated setting based on the parent category and group permissions."
@@ -14,8 +16,11 @@ COM_CONTENT_ATTRIBS_FIELDSET_LABEL="Article Options"
 COM_CONTENT_BATCH_MENU_LABEL="Select Category for Move/Copy"
 COM_CONTENT_BATCH_OPTIONS="Batch process the selected articles"
 COM_CONTENT_BATCH_TIP="If choosing to copy an article, any other actions selected will be applied to the copied article. Otherwise, all actions are applied to the selected article."
+COM_CONTENT_BATCH_SUCCESS="Successfully %s selected articles."
+COM_CONTENT_BATCH_NO_CATEGORY_SELECTED="No target category selected for batch processing."
 COM_CONTENT_CHANGE_ARTICLE="Select or Change article"
 COM_CONTENT_CHANGE_ARTICLE_BUTTON="Select / Change"
+COM_CONTENT_CHOOSE_CATEGORY_LABEL="Category"
 COM_CONTENT_CHOOSE_CATEGORY_DESC="Select a parent category"
 COM_CONTENT_CONFIG_ARTICLE_SETTINGS_DESC="These settings apply for article layouts unless they are changed for a specific menu item."
 COM_CONTENT_CONFIG_BLOG_SETTINGS_DESC="These settings apply for blog or featured layouts unless they are changed for a specific menu item."
@@ -50,6 +55,7 @@ COM_CONTENT_FIELD_FEATURED_DESC="Assign the article to the featured blog layout"
 COM_CONTENT_FIELD_FULL_DESC="Image for the single article display"
 COM_CONTENT_FIELD_FULL_LABEL="Full article image"
 COM_CONTENT_FIELD_HITS_DESC="Number of hits for this article"
+COM_CONTENT_FIELD_ID_LABEL="ID"
 COM_CONTENT_FIELD_IMAGE_DESC="The image to be displayed"
 COM_CONTENT_FIELD_IMAGE_ALT_DESC="Alternative text used for visitors without access to images. Replaced with caption text if it is present."
 COM_CONTENT_FIELD_IMAGE_ALT_LABEL="Alt text"
@@ -58,7 +64,9 @@ COM_CONTENT_FIELD_IMAGE_CAPTION_LABEL="Caption"
 COM_CONTENT_FIELD_INTRO_DESC="Image for the intro text layouts such as blogs and featured"
 COM_CONTENT_FIELD_INTRO_LABEL="Intro Image"
 COM_CONTENT_FIELD_LANGUAGE_DESC="The language that the article is assigned to."
+COM_CONTENT_FIELD_MODIFIED_LABEL="Modified Date"
 COM_CONTENT_FIELD_MODIFIED_DESC="The date and time that the article was last modified."
+COM_CONTENT_FIELD_MODIFIER_LABEL="Modified by"
 COM_CONTENT_FIELD_OPTION_ABOVE="Above"
 COM_CONTENT_FIELD_OPTION_BELOW="Below"
 COM_CONTENT_FIELD_PUBLISH_DOWN_DESC="An optional date to Finish Publishing the article."
@@ -94,19 +102,16 @@ COM_CONTENT_FLOAT_INTRO_LABEL="Intro Image Float"
 COM_CONTENT_ID_LABEL="ID"
 COM_CONTENT_LEFT="Left"
 COM_CONTENT_MONTH="Month"
+COM_CONTENT_CHECKED_IN_ERROR="Not authorized to check in Article #%d"
 COM_CONTENT_N_ITEMS_ARCHIVED="%s articles archived."
 COM_CONTENT_N_ITEMS_ARCHIVED_1="%s article archived."
 COM_CONTENT_N_ITEMS_CHECKED_IN_0="No article successfully checked in"
 COM_CONTENT_N_ITEMS_CHECKED_IN_1="%d article successfully checked in"
-COM_CONTENT_N_ITEMS_CHECKED_IN_MORE="%d articles successfully checked in"
-COM_CONTENT_N_ITEMS_DELETED="%s articles deleted."
-COM_CONTENT_N_ITEMS_DELETED_1="%s article deleted."
-COM_CONTENT_N_ITEMS_PUBLISHED="%s articles published."
-COM_CONTENT_N_ITEMS_PUBLISHED_1="%s article published."
-COM_CONTENT_N_ITEMS_TRASHED="%s articles trashed."
-COM_CONTENT_N_ITEMS_TRASHED_1="%s article trashed."
-COM_CONTENT_N_ITEMS_UNPUBLISHED="%s articles unpublished."
-COM_CONTENT_N_ITEMS_UNPUBLISHED_1="%s article unpublished."
+COM_CONTENT_N_ITEMS_CHECKED_IN_MORE="%d %s successfully checked in"
+COM_CONTENT_N_ITEMS_DELETED="%s %s deleted."
+COM_CONTENT_N_ITEMS_PUBLISHED="%s %s published."
+COM_CONTENT_N_ITEMS_UNPUBLISHED="%s %s unpublished."
+COM_CONTENT_N_ITEMS_TRASHED="%s %s trashed."
 COM_CONTENT_NEW_ARTICLE="New Article"
 COM_CONTENT_NO_ARTICLES_DESC="If Show, the message 'There are no articles in this category' will display when there are no articles in the category or when 'Empty Categories' is set to show."
 COM_CONTENT_NO_ARTICLES_LABEL="No Articles Message"
