[APP/COM_PARTNERS] adding hints in partner edit, can be changed from language file, issue #9

--- a/admin/language/en-GB/en-GB.com_partners.ini
+++ b/admin/language/en-GB/en-GB.com_partners.ini
@@ -28,6 +28,21 @@ COM_PARTNERS_COL_ACTIVITIES = "Activities";
 COM_PARTNERS_COL_INTERNAL_NAME =  "Internal Name";
 COM_PARTNERS_COL_EXTERNAL_NAME =  "External Name";
 COM_PARTNERS_COL_DESCRIPTION = "Description";
+:Entry Field Hints
+
+COM_PARTNERS_HINT_NAME = "Name of the partner";
+COM_PARTNERS_HINT_DATE_JOINED = "Date that QUBES and partner joined forces";
+COM_PARTNERS_HINT_ABOUT = "A brief description of the partner, can use HTML formatting";
+COM_PARTNERS_HINT_PARTNER_TYPE = "Listed are the internal names of the partner_types";
+COM_PARTNERS_HINT_LINK = "The URL of the partners website";
+COM_PARTNERS_HINT_LOGO_URL = "Upload the logo partner, jpg or png";
+COM_PARTNERS_HINT_GROUP_CN = "CN- the url extension of the QUBES group";
+COM_PARTNERS_HINT_TWITTER_HANDLE = "@examplehandle"
+COM_PARTNERS_HINT_QUBES_LIASON = "Liason for QUBES"
+COM_PARTNERS_HINT_PARTNER_LIASON = "Liason for the partner
+COM_PARTNERS_HINT_ACTIVITIES = "List activities here"
+
+
 
 ; Entry Fields
 COM_PARTNERS_FIELD_NAME="Name"
