--- a/admin/language/en-GB/en-GB.com_partners.ini
+++ b/admin/language/en-GB/en-GB.com_partners.ini
@@ -21,25 +21,25 @@ COM_PARTNERS_COL_NAME="NAME"
 COM_PARTNERS_COL_PARTNER_TYPE="Partner Type"
 COM_PARTNERS_COL_LINK="Link(URL)"
 COM_PARTNERS_COL_TWITTER_HANDLE="Twitter Handle"
-COM_PARTNERS_COL_QUBES_LIASON = "QUBES liason";
-COM_PARTNERS_COL_PARTNER_LIASON = "Partner liason";
-COM_PARTNERS_COL_ACTIVITIES = "Activities";
+COM_PARTNERS_COL_QUBES_LIASON = "QUBES liason"
+COM_PARTNERS_COL_PARTNER_LIASON = "Partner liason"
+COM_PARTNERS_COL_ACTIVITIES = "Activities"
 
-COM_PARTNERS_COL_INTERNAL_NAME =  "Internal Name";
-COM_PARTNERS_COL_EXTERNAL_NAME =  "External Name";
-COM_PARTNERS_COL_DESCRIPTION = "Description";
-:Entry Field Hints
+COM_PARTNERS_COL_INTERNAL_NAME =  "Internal Name"
+COM_PARTNERS_COL_EXTERNAL_NAME =  "External Name"
+COM_PARTNERS_COL_DESCRIPTION = "Description"
 
-COM_PARTNERS_HINT_NAME = "Name of the partner";
-COM_PARTNERS_HINT_DATE_JOINED = "Date that QUBES and partner joined forces";
-COM_PARTNERS_HINT_ABOUT = "A brief description of the partner, can use HTML formatting";
-COM_PARTNERS_HINT_PARTNER_TYPE = "Listed are the internal names of the partner_types";
-COM_PARTNERS_HINT_LINK = "The URL of the partners website";
-COM_PARTNERS_HINT_LOGO_URL = "Upload the logo partner, jpg or png";
-COM_PARTNERS_HINT_GROUP_CN = "CN- the url extension of the QUBES group";
+; Entry Field Hints
+COM_PARTNERS_HINT_NAME = "Name of the partner"
+COM_PARTNERS_HINT_DATE_JOINED = "Date that QUBES and partner joined forces"
+COM_PARTNERS_HINT_ABOUT = "A brief description of the partner, can use HTML formatting"
+COM_PARTNERS_HINT_PARTNER_TYPE = "Listed are the internal names of the partner_types"
+COM_PARTNERS_HINT_LINK = "The URL of the partners website"
+COM_PARTNERS_HINT_LOGO_URL = "Upload the logo partner, jpg or png"
+COM_PARTNERS_HINT_GROUP_CN = "CN- the url extension of the QUBES group"
 COM_PARTNERS_HINT_TWITTER_HANDLE = "@examplehandle"
 COM_PARTNERS_HINT_QUBES_LIASON = "Liason for QUBES"
-COM_PARTNERS_HINT_PARTNER_LIASON = "Liason for the partner
+COM_PARTNERS_HINT_PARTNER_LIASON = "Liason for the partner"
 COM_PARTNERS_HINT_ACTIVITIES = "List activities here"
 
 
@@ -54,15 +54,15 @@ COM_PARTNERS_FIELD_ID="ID"
 COM_PARTNERS_FIELD_LINK="Link(URL)"
 COM_PARTNERS_FIELD_LOGO="Logo(URL)"
 COM_PARTNERS_FIELD_GROUP_CN = "Group CN"
-COM_PARTNERS_FIELD_TWITTER_HANDLE="Twitter Handle";
-COM_PARTNERS_FIELD_QUBES_LIASON = "QUBES liason";
-COM_PARTNERS_FIELD_PARTNER_LIASON = "Partner liason";
-COM_PARTNERS_FIELD_ACTIVITIES = "Activities";
-COM_PARTNERS_SELECT = "Select";
+COM_PARTNERS_FIELD_TWITTER_HANDLE="Twitter Handle"
+COM_PARTNERS_FIELD_QUBES_LIASON = "QUBES liason"
+COM_PARTNERS_FIELD_PARTNER_LIASON = "Partner liason"
+COM_PARTNERS_FIELD_ACTIVITIES = "Activities"
+COM_PARTNERS_SELECT = "Select"
 
-COM_PARTNERS_FIELD_INTERNAL_NAME = "Internal Name";	
+COM_PARTNERS_FIELD_INTERNAL_NAME = "Internal Name"
 COM_PARTNERS_FIELD_EXTERNAL_NAME =  "External Name"
-COM_PARTNERS_FIELD_DESCRIPTION = "Description";
+COM_PARTNERS_FIELD_DESCRIPTION = "Description"
 
 ; Messages
 COM_PARTNERS_ERROR_MISSING_FIELDS="Please fill out all required fields."
