[COM_PUBLICATIONS][PLG_PUBLICATIONS_FORKS] Changes to publications to support forking (disabled by default) and adding Forks plugin

--- a/core/components/com_publications/admin/language/en-GB/en-GB.com_publications.ini
+++ b/core/components/com_publications/admin/language/en-GB/en-GB.com_publications.ini
@@ -517,6 +517,8 @@ COM_PUBLICATIONS_CONFIG_COMPONENT_ON="Component ON/OFF"
 COM_PUBLICATIONS_CONFIG_COMPONENT_ON_DESC="Enable Publications component, or redirect to Resources component"
 COM_PUBLICATIONS_CONFIG_ALLOW_CONTRIB="User Contributions Outside of Projects"
 COM_PUBLICATIONS_CONFIG_ALLOW_CONTRIB_DESC="Allow users to work on drafts from within Publications component without starting a project"
+COM_PUBLICATIONS_CONFIG_ALLOW_FORKS="Allow Forks"
+COM_PUBLICATIONS_CONFIG_ALLOW_FORKS_DESC="Allow entries to be forked. A fork is a copy of an entry that allows the user to use the source materials as a starting point for a derivation."
 COM_PUBLICATIONS_CONFIG_AUTO_APPROVE="Auto-approve"
 COM_PUBLICATIONS_CONFIG_AUTO_APPROVE_DESC="Automatically approve new submissions"
 COM_PUBLICATIONS_CONFIG_AUTO_APPROVED_USERS="Auto-approved Users"
