[APP/COM_PARTNERS] fixed issue #16, image upload isnt working yet, but here are some files

--- a/admin/language/en-GB/en-GB.com_partners.ini
+++ b/admin/language/en-GB/en-GB.com_partners.ini
@@ -76,3 +76,8 @@ COM_PARTNERS_ITEMS_ARCHIVED="%s item(s) archived."
 ; Config
 COM_PARTNERS_CONFIG_SHOWSTUFF_LABEL="Show stuff"
 COM_PARTNERS_CONFIG_SHOWSTUFF_DESC="Show stuff?"
+
+;image upload
+COM_PARTNERS_MEDIA_UPLOAD = "Upload";
+COM_PARTNERS_MEDIA_WILL_REPLACE_EXISTING_IMAGE = "will replace existing image";
+COM_PARTNERS_NO_ID = "No ID";
