[PURR][#1314]Revise code based on review comments

--- a/core/components/com_members/site/language/en-GB/en-GB.com_members.ini
+++ b/core/components/com_members/site/language/en-GB/en-GB.com_members.ini
@@ -309,8 +309,7 @@ COM_MEMBERS_PROFILE_ORCID_NOTE_ABOUT_PRIVATE_ORCID="Note that most ORCID records
 COM_MEMBERS_PROFILE_ORCID_CREATE_ORCID="Create a new ORCID"
 COM_MEMBERS_PROFILE_ORCID_CLICK_CREATE_BUTTON="If you can\'t find your ID or would like to create one, click the "Create or Connect your ORCID iD" button."
 COM_MEMBERS_PROFILE_ORCID_CREATE_OR_CONNECT="Create or Connect your ORCID iD"
-COM_MEMBERS_REDIRECT_ORCID_THANK_YOU="Thank you, "
-COM_MEMBERS_REDIRECT_ORCID_EXCLAMATION_MARK="!"
+COM_MEMBERS_REDIRECT_ORCID_THANK_YOU="Thank you, %s!"
 COM_MEMBERS_REDIRECT_ORCID_YOUR_ORCID="Your ORCID"
 COM_MEMBERS_REDIRECT_ORCID_IS="is"
 COM_MEMBERS_REDIRECT_ORCID_DENY="Sorry, your ORCID isn't generated or you don't login to ORCID. If you still want to know anything about ORCID, please go to "
