[APP/COM_PARTNERS] uploading with image upload bug

--- a/admin/language/en-GB/en-GB.com_partners.ini
+++ b/admin/language/en-GB/en-GB.com_partners.ini
@@ -52,7 +52,7 @@ COM_PARTNERS_FIELD_ABOUT="About"
 COM_PARTNERS_FIELD_PARTNER_TYPE="Partner Type"
 COM_PARTNERS_FIELD_ID="ID"
 COM_PARTNERS_FIELD_LINK="Link(URL)"
-COM_PARTNERS_FIELD_LOGO="Logo(URL)"
+COM_PARTNERS_FIELD_LOGO="Logo"
 COM_PARTNERS_FIELD_GROUP_CN = "Group CN"
 COM_PARTNERS_FIELD_TWITTER_HANDLE="Twitter Handle"
 COM_PARTNERS_FIELD_QUBES_LIASON = "QUBES liason"
@@ -81,3 +81,8 @@ COM_PARTNERS_CONFIG_SHOWSTUFF_DESC="Show stuff?"
 COM_PARTNERS_MEDIA_UPLOAD = "Upload";
 COM_PARTNERS_MEDIA_WILL_REPLACE_EXISTING_IMAGE = "will replace existing image";
 COM_PARTNERS_NO_ID = "No ID";
+COM_PARTNERS_ERROR_UNABLE_TO_CREATE_UPLOAD_PATH = "Error: Unable to create Upload Path"
+COM_PARTNERS_ERROR_FAILED_VIRUS_SCAN = "Error: Failed Virus Scan"
+COM_PARTNERS_ERROR_FILE_MOVE_FAILED = "Error: File Move Failed"
+COM_PARTNERS_ERROR_NAME_NULL = "Error: logo_image name not set"
+COM_PARTNERS_CURRENT_IMG = "Current Image"
