[APP/COM_PARTNERS] Fixed some reference to Dr. Who and modified language a bit.

--- a/site/language/en-GB/en-GB.com_partners.ini
+++ b/site/language/en-GB/en-GB.com_partners.ini
@@ -16,7 +16,7 @@ COM_PARTNERS_DESCRIPTION = "Description"
 COM_PARTNERS_GO = "Go!"
 COM_PARTNERS_BACK = "Back"
 COM_PARTNERS_MAIN = "Main Page"
-COM_PARTNERS_PARTNER_TYPES_ALL = "All"
+COM_PARTNERS_PARTNER_TYPES_ALL = "- All Partner Types -"
 
 
 ;table pages
