[APP/COM_PARTNERS] fixed bug in migration script

--- a/admin/language/en-GB/en-GB.com_partners.ini
+++ b/admin/language/en-GB/en-GB.com_partners.ini
@@ -21,8 +21,8 @@ COM_PARTNERS_COL_NAME="NAME"
 COM_PARTNERS_COL_PARTNER_TYPE="Partner Type"
 COM_PARTNERS_COL_LINK="Link(URL)"
 COM_PARTNERS_COL_TWITTER_HANDLE="Twitter Handle"
-COM_PARTNERS_COL_QUBES_LIASON = "QUBES liason"
-COM_PARTNERS_COL_PARTNER_LIASON = "Partner liason"
+COM_PARTNERS_COL_QUBES_LIASON_PRIMARY = "Primary QUBES liason"
+COM_PARTNERS_COL_PARTNER_LIASON = "Primary Partner liason"
 COM_PARTNERS_COL_ACTIVITIES = "Activities"
 
 COM_PARTNERS_COL_INTERNAL_NAME =  "Internal Name"
@@ -55,8 +55,10 @@ COM_PARTNERS_FIELD_LINK="Link(URL)"
 COM_PARTNERS_FIELD_LOGO="Logo"
 COM_PARTNERS_FIELD_GROUP_CN = "Group CN"
 COM_PARTNERS_FIELD_TWITTER_HANDLE="Twitter Handle"
-COM_PARTNERS_FIELD_QUBES_LIASON = "QUBES liason"
-COM_PARTNERS_FIELD_PARTNER_LIASON = "Partner liason"
+COM_PARTNERS_FIELD_QUBES_LIASON_PRIMARY = "Primary QUBES liason"
+COM_PARTNERS_FIELD_QUBES_LIASON_SECONDARY = "Secondary QUBES liason"
+COM_PARTNERS_FIELD_PARTNER_LIASON_PRIMARY = "Primary Partner liason"
+COM_PARTNERS_FIELD_PARTNER_LIASON_SECONDARY= "Secondary Partner liason"
 COM_PARTNERS_FIELD_ACTIVITIES = "Activities"
 COM_PARTNERS_SELECT = "Select"
 
