Fixes zero/blank id problem and adds colons after fields

--- a/core/components/com_wiki/admin/language/en-GB/en-GB.com_wiki.ini
+++ b/core/components/com_wiki/admin/language/en-GB/en-GB.com_wiki.ini
@@ -12,7 +12,7 @@ COM_CONFIG_CACHE_FIELDSET_LABEL="Caching"
 COM_WIKI_PLUGINS="Plugins"
 COM_WIKI_UNPUBLISH="unpublish"
 COM_WIKI_PUBLISH="publish"
-COM_WIKI_NUM_REVISIONS="%s revisions"
+COM_WIKI_NUM_REVISIONS="%s revision(s)"
 COM_WIKI_NUM_COMMENTS="%s comment(s)"
 COM_WIKI_PAGE="Page"
 COM_WIKI_PAGES="Wiki Pages"
@@ -110,8 +110,8 @@ COM_WIKI_COMMENT_SAVED="Comment saved!"
 COM_WIKI_PAGES_DELETED="%s page(s) successfully removed"
 COM_WIKI_COMMENTS_DELETED="%s comment(s) successfully removed"
 COM_WIKI_CONFIRM_DELETE="Please confirm removal"
-COM_WIKI_ITEMS_PUBLISHED="%s Item(s) successfully published"
-COM_WIKI_ITEMS_UNPUBLISHED="%s Item(s) successfully unpublished"
+COM_WIKI_ITEMS_PUBLISHED="%s item(s) successfully published"
+COM_WIKI_ITEMS_UNPUBLISHED="%s item(s) successfully unpublished"
 COM_WIKI_DELETE_WARNING="<strong>Warning!</strong> Deletion is permanent and any associated revisions, comments, etc. with this page will be removed."
 
 ; Errors
