--- a/core/components/com_events/admin/language/en-GB/en-GB.com_events.ini
+++ b/core/components/com_events/admin/language/en-GB/en-GB.com_events.ini
@@ -271,16 +271,16 @@ COM_EVENTS_CAL_LANG_CONFIG="Events Component Parameters"
 COM_EVENTS_CAL_LANG_CONFIG_ADMINMAIL="Admin mail"
 COM_EVENTS_CAL_LANG_CONFIG_ADMINLEVEL="Admin Level (who is allowed to post events)"
 COM_EVENTS_CAL_LANG_CONFIG_FIRSTDAY="First day"
-COM_EVENTS_CAL_LANG_CONFIG_VIEWMAIL="View mail ?"
-COM_EVENTS_CAL_LANG_CONFIG_VIEWBY="View "_QQ_"By"_QQ_" ?"
-COM_EVENTS_CAL_LANG_CONFIG_VIEWHITS="View "_QQ_"Hits"_QQ_" ?"
-COM_EVENTS_CAL_LANG_CONFIG_VIEWREPEAT="View Repeat and time ?"
-COM_EVENTS_CAL_LANG_CONFIG_DATEFORMAT="Date Format ?"
-COM_EVENTS_CAL_LANG_CONFIG_TIMEFORMAT="Use 12hr time Format ?"
-COM_EVENTS_CAL_LANG_CONFIG_NAVCOLOR="Navigation Bar Color ?"
-COM_EVENTS_CAL_LANG_CONFIG_STARTPAGE="Start Page ?"
-COM_EVENTS_CAL_LANG_CONFIG_NUMEVENTS="No. of Events to List per page for week, month, or year views:"
-COM_EVENTS_CAL_LANG_CONFIG_SIMPLEFORM="Use Simple (i.e., No Repeat types) Event entry Form for user front end ?"
+COM_EVENTS_CAL_LANG_CONFIG_VIEWMAIL="View mail"
+COM_EVENTS_CAL_LANG_CONFIG_VIEWBY="View "_QQ_"By"_QQ_""
+COM_EVENTS_CAL_LANG_CONFIG_VIEWHITS="View "_QQ_"Hits"_QQ_""
+COM_EVENTS_CAL_LANG_CONFIG_VIEWREPEAT="View Repeat and time"
+COM_EVENTS_CAL_LANG_CONFIG_DATEFORMAT="Date Format"
+COM_EVENTS_CAL_LANG_CONFIG_TIMEFORMAT="Use 12hr time Format"
+COM_EVENTS_CAL_LANG_CONFIG_NAVCOLOR="Navigation Bar Color"
+COM_EVENTS_CAL_LANG_CONFIG_STARTPAGE="Start Page"
+COM_EVENTS_CAL_LANG_CONFIG_NUMEVENTS="No. of Events to List per page for week, month, or year views"
+COM_EVENTS_CAL_LANG_CONFIG_SIMPLEFORM="Use Simple (i.e., No Repeat types) Event entry Form for user front end"
 COM_EVENTS_CAL_LANG_CONFIG_SAVED="Configuration saved"
 COM_EVENTS_CAL_LANG_CUSTOM_FIELDS="Custom fields"
 COM_EVENTS_CAL_LANG_SAVED="Saved"
