Fixes titles in newsletter component

--- a/core/components/com_newsletter/admin/language/en-GB/en-GB.com_newsletter.ini
+++ b/core/components/com_newsletter/admin/language/en-GB/en-GB.com_newsletter.ini
@@ -5,9 +5,11 @@
 
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-COM_NEWSLETTER="Newsletters"
-COM_NEWSLETTER_NEWSLETTER="Newsletter"
+COM_NEWSLETTER="Newsletter"
+COM_NEWSLETTER_TITLE="Newsletter Manager"
+COM_NEWSLETTER_NEWSLETTERS="Newsletter"
 COM_NEWSLETTER_NEWSLETTERS="Newsletters"
+COM_NEWSLETTER_MAILINGLISTS="Mailing Lists"
 COM_NEWSLETTER_MAILINGS="Mailings"
 COM_NEWSLETTER_LISTS="Lists"
 COM_NEWSLETTER_TEMPLATES="Templates"
@@ -21,12 +23,7 @@ COM_NEWSLETTER_EDIT="Edit"
 COM_NEWSLETTER_NEW="New"
 COM_NEWSLETTER_SEND="SEND NEWSLETTER"
 COM_NEWSLETTER_TEST_SENDING="Newsletter Test Sending"
-COM_NEWSLETTER_NEWSLETTER_MAILINGS="Newsletter Mailings"
 COM_NEWSLETTER_NEWSLETTER_MAILING_STATS="Newsletter Mailing Stats"
-COM_NEWSLETTER_NEWSLETTER_TOOLS="Newsletters Tools"
-COM_NEWSLETTER_NEWSLETTER_TEMPLATES="Newsletter Templates"
-COM_NEWSLETTER_NEWSLETTER_MAILINGLISTS="Newsletter Mailing Lists"
-
 
 ; Toolbar
 COM_NEWSLETTER_TOOLBAR_SEND="Send"
