Fixes titles in store component

--- a/core/components/com_store/admin/language/en-GB/en-GB.com_store.ini
+++ b/core/components/com_store/admin/language/en-GB/en-GB.com_store.ini
@@ -9,10 +9,10 @@ COM_STORE_CONFIGURATION="Store Configuration"
 
 COM_STORE_STORE="Store"
 COM_STORE_MANAGER="Store Manager"
-COM_STORE_ITEMS="items"
-COM_STORE_ITEM="item"
-COM_STORE_POINT="point"
-COM_STORE_POINTS="points"
+COM_STORE_ITEMS="Items"
+COM_STORE_ITEM="Item"
+COM_STORE_POINT="Point"
+COM_STORE_POINTS="Points"
 COM_STORE_MERCHANDISE="Merchandise"
 COM_STORE_ORDER="Order"
 COM_STORE_ORDERS="Orders"
