--- a/core/components/com_members/site/language/en-GB/en-GB.com_members.ini
+++ b/core/components/com_members/site/language/en-GB/en-GB.com_members.ini
@@ -312,6 +312,7 @@ COM_MEMBERS_PROFILE_ORCID_CREATE_OR_CONNECT="Create or Connect your ORCID iD"
 COM_MEMBERS_REDIRECT_ORCID_THANK_YOU="Thank you, %s!"
 COM_MEMBERS_REDIRECT_ORCID_YOUR_ORCID="Your ORCID"
 COM_MEMBERS_REDIRECT_ORCID_IS="is"
+COM_MEMBERS_REDIRECT_ORCID_INDICATION_MESSAGE="Please close this tab page and go back to the account registration process or your profile page!"
 COM_MEMBERS_REDIRECT_ORCID_DENY="Sorry, your ORCID isn't generated or you don't login to ORCID. If you still want to know anything about ORCID, please go to "
 COM_MEMBERS_REDIRECT_ORCID_SIGN_IN_OR_REGISTER="Sign in or Register ORCID"
 
