--- a/core/components/com_groups/admin/language/en-GB/en-GB.com_groups.ini
+++ b/core/components/com_groups/admin/language/en-GB/en-GB.com_groups.ini
@@ -33,9 +33,13 @@ COM_GROUPS_MEMBERS_LOG="%s current member(s) will be notified."
 
 COM_GROUPS_JOIN_POLICY="Join Policy"
 COM_GROUPS_JOIN_POLICY_PUBLIC="Public"
+COM_GROUPS_JOIN_POLICY_PUBLIC_DESC="Any site member can join"
 COM_GROUPS_JOIN_POLICY_RESTRICTED="Restricted"
+COM_GROUPS_JOIN_POLICY_RESTRICTED_DESC="User must request membership"
 COM_GROUPS_JOIN_POLICY_INVITE="Invite Only"
+COM_GROUPS_JOIN_POLICY_INVITE_DESC="User must be invited by existing group member"
 COM_GROUPS_JOIN_POLICY_CLOSED="Closed"
+COM_GROUPS_JOIN_POLICY_CLOSED_DESC="Membership cannot be changed"
 COM_GROUPS_CONTENT_PRIVACY="Content Privacy"
 COM_GROUPS_MEMBER_ACCEPT="Accept"
 COM_GROUPS_MEMBER_UNINVITE="Uninvite"
