--- a/core/plugins/groups/calendar/language/en-GB/en-GB.plg_groups_calendar.ini
+++ b/core/plugins/groups/calendar/language/en-GB/en-GB.plg_groups_calendar.ini
@@ -13,6 +13,13 @@ PLG_GROUPS_CALENDAR_FRIDAY_SHORT="Fri"
 PLG_GROUPS_CALENDAR_SATURDAY_SHORT="Sat"
 PLG_GROUPS_CALENDAR_ADD_NEW_LINK_TEXT="New Event"
 
+; Registrants Columns
+PLG_GROUPS_CALENDAR_REGISTRANTS_NAME="Name"
+PLG_GROUPS_CALENDAR_REGISTRANTS_EMAIL="Email"
+PLG_GROUPS_CALENDAR_REGISTRANTS_DATE="Registration Date"
+PLG_GROUPS_CALENDAR_REGISTRANTS_UNREGISTER="Unregister from Event"
+
+
 ; Checks
 EVENTS_MUST_HAVE_TITLE="Your Event must contain a title."
 
