--- a/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
+++ b/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
@@ -36,7 +36,7 @@ COM_JOBS_MSG_SUBSCRIPTION_PROCESSED="Your employer/subscription information has 
 COM_JOBS_MSG_SUBSCRIPTION_ACCEPTED="Your subscription request has been accepted. Thank you!"
 COM_JOBS_MSG_SUBSCRIPTION_YOU_HAVE_ACCESS="You have access to employer services for the next"
 COM_JOBS_MSG_SUBSCRIPTION_WE_WILL_CONTACT="We will contact you soon regarding the activation of your subscription request."
-COM_JOBS_MSG_LOGIN_APPLY="Please login to apply for this job ad."
+COM_JOBS_MSG_LOGIN_APPLY="Please login to apply to this job ad."
 COM_JOBS_MSG_LOGIN_RESUME="Please login to post or access your resume."
 COM_JOBS_MSG_LOGIN_SAVE_APPLICATION="Please login to save job application."
 COM_JOBS_MSG_JOB_REOPENED="Your job posting has been re-opened."
