--- a/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
+++ b/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
@@ -124,7 +124,7 @@ COM_JOBS_ACTION_SAVE_PREVIEW="Save as Draft and Preview"
 COM_JOBS_ACTION_SAVE="Save"
 COM_JOBS_ACTION_CREATE_PROFILE="Create a job seeker profile"
 COM_JOBS_ACTION_SAVE_CHANGES_APPLICATION="Save changes to application"
-COM_JOBS_ACTION_APPLY_THIS_JOB="Apply for this Job"
+COM_JOBS_ACTION_APPLY_THIS_JOB="Apply for this job"
 COM_JOBS_ACTION_SIGN_UP="Sign up"
 COM_JOBS_ACTION_SEARCH="Search"
 
