--- a/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
+++ b/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
@@ -187,6 +187,7 @@ COM_JOBS_DASHBOARD_APPLICATIONS="applications"
 COM_JOBS_DASHBOARD_AD_NEW_JOB="Add a new job"
 
 ; Apply
+COM_JOBS_APPLY_NOW="Apply now!"
 COM_JOBS_APPLY_TO_APPLY="To apply to this posting through"
 COM_JOBS_APPLY_NEED_RESUME="you need to upload your current resume and create a job seeker profile."
 COM_JOBS_APPLY_WARNING_OWN_AD="Do you know you are applying to your own job posting? That's okay, people do weirder things."
@@ -222,7 +223,7 @@ COM_JOBS_JOB_STATUS_INACTIVE="Inactive"
 COM_JOBS_JOB_STATUS_DRAFT="Draft"
 COM_JOBS_JOB_STATUS_CANCELLED="Cancelled"
 COM_JOBS_JOB_APPLIED_ON="Applied on"
-COM_JOBS_JOB_WITHDREW_ON="Withdrew on"
+COM_JOBS_JOB_WITHDREW_ON="Withdrew application on"
 COM_JOBS_JOB_AD_PUBLISHED="This job ad is published."
 COM_JOBS_JOB_AD_PUBLISHED_TIPS="at any time. If you need to take down this listing, please use the &quot;Unpublish this job&quot; link at the bottom of the posting."
 COM_JOBS_JOB_AD_UNPUBLISHED="This job ad is unpublished."
