--- a/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
+++ b/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
@@ -127,6 +127,7 @@ COM_JOBS_ACTION_SAVE_CHANGES_APPLICATION="Save changes to application"
 COM_JOBS_ACTION_APPLY_THIS_JOB="Apply for this job"
 COM_JOBS_ACTION_SIGN_UP="Sign up"
 COM_JOBS_ACTION_SEARCH="Search"
+COM_JOBS_ACTION_EDIT_MY_PROFILE="Edit my profile"
 
 COM_JOBS_LOGIN_NO_ACCOUNT="No account?"
 COM_JOBS_LOGIN_REGISTER_NOW="Register now"
