[HUBZERO][#10889][COM_MEMBERS][MOD_SUBMENU] Make sure com_categories displays the proper menu for com_members when adjusting member notes

--- a/core/components/com_members/admin/language/en-GB/en-GB.com_members.ini
+++ b/core/components/com_members/admin/language/en-GB/en-GB.com_members.ini
@@ -19,6 +19,8 @@ COM_MEMBERS_MENU_ONLINE="Who's Online"
 COM_MEMBERS_MENU_PASSWORDS="Passwords"
 COM_MEMBERS_MENU_ACCESS="Access"
 COM_MEMBERS_MENU_NOTES="Notes"
+COM_MEMBERS_SUBMENU_NOTES="User Notes"
+COM_MEMBERS_SUBMENU_NOTE_CATEGORIES="Note Categories"
 
 ; Sections
 COM_MEMBERS_SECTION_ACCOUNT="Account"
