[COM_JOBS] Makes buttons look cleaner

--- a/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
+++ b/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
@@ -109,7 +109,7 @@ COM_JOBS_ACTION_PUBLISH_AD="Publish Ad"
 COM_JOBS_ACTION_MAKE_CHANGES="Make Changes"
 COM_JOBS_ACTION_REMOVE_AD="Remove Ad"
 COM_JOBS_ACTION_REOPEN_THIS="Re-open this job"
-COM_JOBS_ACTION_INCLUDE_INPUBLIC_LISTING="(Include in public listing)"
+COM_JOBS_ACTION_INCLUDE_INPUBLIC_LISTING="Include in public listing"
 COM_JOBS_ACTION_DELETE_ALL_RECORDS="Delete all records"
 COM_JOBS_ACTION_DELETE_THIS_JOB="Delete this job"
 COM_JOBS_ACTION_BROWSE_ALL_JOBS="Browse all jobs"
