--- a/core/components/com_categories/admin/language/en-GB/en-GB.com_categories.ini
+++ b/core/components/com_categories/admin/language/en-GB/en-GB.com_categories.ini
@@ -7,11 +7,12 @@ CATEGORIES_FIELDSET_OPTIONS="Options"
 COM_CATEGORIES="Categories"
 COM_CATEGORY="Category"
 COM_CATEGORY_CHECKED_IN_ERROR="Not authorized to check in Category #%d"
-COM_CATEGORY_FIELD_ID="ID"
-COM_CATEGORY_FIELD_CREATOR="Created By"
-COM_CATEGORY_FIELD_CREATED="Created"
-COM_CATEGORY_FIELD_MODIFIER="Modified By"
-COM_CATEGORY_FIELD_MODIFIED="Modified"
+COM_CATEGORIES_FIELD_ID="ID"
+COM_CATEGORIES_FIELD_CREATOR="Created By"
+COM_CATEGORIES_FIELD_CREATED="Created"
+COM_CATEGORIES_FIELD_MODIFIER="Modified By"
+COM_CATEGORIES_FIELD_MODIFIED="Modified"
+COM_CATEGORIES_FIELD_EXTENSION="Extension"
 COM_CATEGORIES_ACCESS_CREATE_DESC="New setting for <strong>create actions</strong> in this category and the calculated setting based on the parent category and group permissions."
 COM_CATEGORIES_ACCESS_DELETE_DESC="New setting for <strong>delete actions</strong> on this category and the calculated setting based on the parent category and group permissions."
 COM_CATEGORIES_ACCESS_EDIT_DESC="New setting for <strong>edit actions</strong> on this category and the calculated setting based on the parent category and group permissions."
