[COM_BLOG] Make sure uploaded files are checked against the global size limit and allowed extensions

--- a/core/components/com_blog/site/language/en-GB/en-GB.com_blog.ini
+++ b/core/components/com_blog/site/language/en-GB/en-GB.com_blog.ini
@@ -131,6 +131,8 @@ COM_BLOG_NO_ID="No group ID provided."
 COM_BLOG_NO_FILE="No file provided."
 COM_BLOG_NO_DIRECTORY="No directory provided."
 COM_BLOG_ERROR_UPLOADING="Error uploading."
+COM_BLOG_ERROR_UPLOADING_INVALID_FILE="File has an invalid extension, it should be one of %s."
+COM_BLOG_ERROR_UPLOADING_FILE_TOO_BIG="File is too large. Max file upload size is %s"
 COM_BLOG_UNABLE_TO_DELETE_DIRECTORY="Unable to delete directory."
 COM_BLOG_UNABLE_TO_DELETE_FILE="Unable to delete file."
 COM_BLOG_DELETE="Delete"
