[COM_JOBS] Only shows unpublish button to owner and fixes confirmscreen box

--- a/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
+++ b/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
@@ -48,7 +48,7 @@ COM_JOBS_MSG_APPLICATION_ACCEPTED="Thank you for applying for this job. The empl
 COM_JOBS_MSG_APPLICATION_EDITS_ACCEPTED="Your application has been updated. Thank you!"
 COM_JOBS_MSG_JOB_REMOVED="The job ad has been successfully removed."
 COM_JOBS_PLEASE_LOGIN_ACCESS_EMPLOYER="Please login to access employer services"
-COM_JOBS_REVIEW_APPLICANTS="Review All Applicants"
+COM_JOBS_REVIEW_APPLICANTS="Review all applicants"
 
 ; Warnings
 COM_JOBS_WARNING_SUBSCRIPTION_PENDING="Your subscription is pending approval. Access to Employer Services will be granted once the subscription is approved."
