[COM_JOBS] Fixes two views

--- a/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
+++ b/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
@@ -285,6 +285,7 @@ COM_JOBS_NOTICE_ACCESS_PRESERVED="Access to user applications will be preserved"
 COM_JOBS_NOTICE_CANDIDATES_WITHDREW="candidate(s) withdrew application(s)"
 COM_JOBS_NOTICE_ADMIN_UNLIMITED_ACCESS="Administrator (unlimited access)"
 COM_JOBS_NOTICE_UNSPECIFIED="Not specified"
+COM_JOBS_ERROR_JOB_CANT_PUBLISH_OVER_LIMIT="Cannot publish over job limit"
 
 ; Misc.
 COM_JOBS_CANDIDATES="Candidates"
