[COM_JOBS] Blank fields default to Unspecified

--- a/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
+++ b/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
@@ -78,6 +78,7 @@ COM_JOBS_ERROR_MISSING_UID="Missing a valid user id."
 COM_JOBS_ERROR_MISSING_FILENAME="Missing file name."
 COM_JOBS_ERROR_MISSING_EMPLOYER_ID="Missing a valid user id for employer."
 COM_JOBS_ERROR_MISSING_JOB_SEEKER_ID="Missing a valid user id for job seeker."
+COM_JOBS_ERROR_JOB_CANT_PUBLISH_OVER_LIMIT="You cannot publish anymore ads on your current subscription"
 
 COM_JOBS_RESUMES_LAST_UPDATE="last update"
 COM_JOBS_RESUME_NOTICE_BOOKMARKED="The listed candidates are those you bookmarked for further contact. Return to a list of "
@@ -285,7 +286,6 @@ COM_JOBS_NOTICE_ACCESS_PRESERVED="Access to user applications will be preserved"
 COM_JOBS_NOTICE_CANDIDATES_WITHDREW="candidate(s) withdrew application(s)"
 COM_JOBS_NOTICE_ADMIN_UNLIMITED_ACCESS="Administrator (unlimited access)"
 COM_JOBS_NOTICE_UNSPECIFIED="Not specified"
-COM_JOBS_ERROR_JOB_CANT_PUBLISH_OVER_LIMIT="Cannot publish over job limit"
 
 ; Misc.
 COM_JOBS_CANDIDATES="Candidates"
