[COM_JOBS] Error messages for invalid expiration date

--- a/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
+++ b/core/components/com_jobs/site/language/en-GB/en-GB.com_jobs.ini
@@ -79,6 +79,8 @@ COM_JOBS_ERROR_MISSING_FILENAME="Missing file name."
 COM_JOBS_ERROR_MISSING_EMPLOYER_ID="Missing a valid user id for employer."
 COM_JOBS_ERROR_MISSING_JOB_SEEKER_ID="Missing a valid user id for job seeker."
 COM_JOBS_ERROR_JOB_CANT_PUBLISH_OVER_LIMIT="You cannot publish anymore ads on your current subscription"
+COM_JOBS_ERROR_MISSING_EXPIRATION_DATE="Missing an expiration date. Please ensure all required fields are filled in."
+COM_JOBS_ERROR_WRONG_EXPIRATION_DATE="Expiration date can be at max a year from the job submission date."
 
 COM_JOBS_RESUMES_LAST_UPDATE="last update"
 COM_JOBS_RESUME_NOTICE_BOOKMARKED="The listed candidates are those you bookmarked for further contact. Return to a list of "
