[COM_STORE] Rewriting to use ORM models and remove joomla-based code

--- a/core/components/com_store/admin/language/en-GB/en-GB.com_store.ini
+++ b/core/components/com_store/admin/language/en-GB/en-GB.com_store.ini
@@ -56,7 +56,13 @@ COM_STORE_CANCEL="Cancel"
 COM_STORE_SHIPPING="Shipping"
 COM_STORE_PROFILE_INFO="Profile Information"
 COM_STORE_ADMIN_NOTES="Administrator Notes"
-COM_STORE_ID="id"
+COM_STORE_GO="Go"
+COM_STORE_ORDERS_ALL="- Status -"
+COM_STORE_FILTER_SEARCH_PLACEHOLDER="Search items..."
+COM_STORE_ALL_STATES="- State -"
+COM_STORE_ALL_AVAILABILITY="- Availability -"
+COM_STORE_ID="ID"
+COM_STORE_CREATED="Created"
 COM_STORE_NEW="New"
 COM_STORE_LOGIN="Login"
 COM_STORE_NAME="Name"
