[COM_WISHLIST] Check if user is in group before moving wish

--- a/core/components/com_wishlist/site/language/en-GB/en-GB.com_wishlist.ini
+++ b/core/components/com_wishlist/site/language/en-GB/en-GB.com_wishlist.ini
@@ -124,6 +124,7 @@ COM_WISHLIST_ERROR_WISH_MOVE_FAILED="Failed to move the wish."
 COM_WISHLIST_ERROR_INVALID_RESOURCE_ID="Invalid resource ID specified."
 COM_WISHLIST_ERROR_INVALID_GROUP_CN="Invalid group cn specified."
 COM_WISHLIST_ERROR_RESOURCE_ID_NOT_FOUND="Resource with specified ID was not found or not accessible."
+COM_WISHLIST_ERROR_NOT_IN_GROUP="You can only move tickets to groups that you're a member of."
 
 ; Notices
 COM_WISHLIST_NOTICE_WISH_DELETED="Wish successfully deleted."
