[CORE] Adding some useful missing language strings

--- a/core/bootstrap/Api/language/en-GB/en-GB.lib_joomla.ini
+++ b/core/bootstrap/Api/language/en-GB/en-GB.lib_joomla.ini
@@ -28,10 +28,12 @@ JLIB_APPLICATION_ERROR_CHECKOUT_FAILED="Check-out failed with the following erro
 JLIB_APPLICATION_ERROR_CHECKOUT_USER_MISMATCH="The user checking out does not match the user who checked out the item."
 JLIB_APPLICATION_ERROR_COMPONENT_NOT_FOUND="Component not found"
 JLIB_APPLICATION_ERROR_COMPONENT_NOT_FOUND_OR_ENABLED="Page not found"
+JLIB_APPLICATION_ERROR_ITEM_NOT_FOUND="Record not found"
 JLIB_APPLICATION_ERROR_COMPONENT_NOT_LOADING="Error loading component: %1$s, %2$s"
 JLIB_APPLICATION_ERROR_CONTROLLER_GET_NAME="Controller: Cannot get or parse class name."
 JLIB_APPLICATION_ERROR_CREATE_RECORD_NOT_PERMITTED="Create record not permitted"
 JLIB_APPLICATION_ERROR_DELETE_NOT_PERMITTED="Delete not permitted"
+JLIB_APPLICATION_ERROR_DELETE_FAILED="Delete failed with the following error: %s"
 JLIB_APPLICATION_ERROR_EDITSTATE_NOT_PERMITTED="Edit state is not permitted"
 JLIB_APPLICATION_ERROR_EDIT_ITEM_NOT_PERMITTED="Edit is not permitted"
 JLIB_APPLICATION_ERROR_EDIT_NOT_PERMITTED="Edit not permitted"
@@ -42,6 +44,7 @@ JLIB_APPLICATION_ERROR_PATHWAY_LOAD="Unable to load pathway: %s"
 JLIB_APPLICATION_ERROR_REORDER_FAILED="Reorder failed. Error: %s"
 JLIB_APPLICATION_ERROR_ROUTER_LOAD="Unable to load router: %s"
 JLIB_APPLICATION_ERROR_MODELCLASS_NOT_FOUND="Model class %s not found in file"
+JLIB_APPLICATION_ERROR_BIND_FAILED="Failed to bind data: %s"
 JLIB_APPLICATION_ERROR_SAVE_FAILED="Save failed with the following error: %s"
 JLIB_APPLICATION_ERROR_SAVE_NOT_PERMITTED="Save not permitted"
 JLIB_APPLICATION_ERROR_TABLE_NAME_NOT_SUPPORTED="Table %s not supported. File not found."
@@ -52,10 +55,17 @@ JLIB_APPLICATION_SUBMIT_SAVE_SUCCESS="Item successfully submitted."
 JLIB_APPLICATION_SUCCESS_BATCH="Batch process completed successfully."
 JLIB_APPLICATION_SUCCESS_ITEM_REORDERED="Ordering successfully saved."
 JLIB_APPLICATION_SUCCESS_ORDERING_SAVED="Ordering successfully saved."
+JLIB_APPLICATION_ERROR_DOCBLOCK_MISSING="Missing docblock for method '%s' in '%s'"
+JLIB_APPLICATION_ERROR_DOCBLOCK_PARSING="Unable to parse parameter info for method '%s' in '%s'"
 JLIB_ERROR_INFINITE_LOOP="Infinite loop detected"
 JLIB_EVENT_ERROR_DISPATCHER="Dispatcher: :register: Event handler not recognised. Handler: %s"
 JLIB_PLUGIN_ERROR_LOADING_PLUGINS="Error loading Plugins: %s"
 JLIB_REGISTRY_EXCEPTION_LOAD_FORMAT_CLASS="Unable to load format class"
+
+; Activity
+JLIB_ACTIVITY_ITEM_CREATED="Record [%s] created."
+JLIB_ACTIVITY_ITEM_UPDATED="Record [%s] updated."
+JLIB_ACTIVITY_ITEM_DELETED="Record [%s] deleted."
 
 ; Cache
 JLIB_CACHE_ERROR_CACHE_HANDLER_LOAD="Unable to load Cache Handler: %s"
