[COM_CONFIG][TPL_KAMELEON] Rewriting component to not use Joomla code

--- a/core/components/com_config/admin/language/en-GB/en-GB.com_config.ini
+++ b/core/components/com_config/admin/language/en-GB/en-GB.com_config.ini
@@ -1,7 +1,11 @@
-; Joomla! Project
-; Copyright (C) 2005 - 2014 Open Source Matters. All rights reserved.
-; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
-; Note : All ini files need to be saved as UTF-8
+; Copyright 2005-2017 HUBzero Foundation, LLC.
+; All rights reserved.
+;
+; This program is free software; you can redistribute it and/or
+; modify it under the terms of the GNU General Public License,
+; Version 2 as published by the Free Software Foundation.
+
+; Note : All ini files need to be saved as UTF-8 - No BOM
 
 COM_CONFIG="Configuration Manager"
 COM_CONFIG_ACTION_ADMIN_DESC="Allows users in the group to perform any action over the whole site regardless of any other permission settings."
@@ -80,7 +84,7 @@ COM_CONFIG_FIELD_FILTERS_NO_FILTER="No Filtering"
 COM_CONFIG_FIELD_FILTERS_WHITE_LIST="White List"
 COM_CONFIG_FIELD_FORCE_SSL_DESC="Force site access to always occur under SSL (https) for selected areas. You will not be able to access selected areas under non-ssl. Note, you must have SSL enabled on your server to utilise this option."
 COM_CONFIG_FIELD_FORCE_SSL_LABEL="Force SSL"
-COM_CONFIG_FIELD_FTP_ENABLE_DESC="Enable the built in FTP (File Transfer Protocol) functionality which is needed in some server environments to be used instead of the normal upload functionality of the hub"
+COM_CONFIG_FIELD_FTP_ENABLE_DESC="Enable the built in FTP (File Transfer Protocol) functionality which is needed in some server environments to be used instead of the normal upload functionality of the hub!"
 COM_CONFIG_FIELD_FTP_ENABLE_LABEL="Enable FTP"
 COM_CONFIG_FIELD_FTP_HOST_DESC="Enter the name of the host of your FTP server"
 COM_CONFIG_FIELD_FTP_HOST_LABEL="FTP Host"
@@ -96,7 +100,7 @@ COM_CONFIG_FIELD_GZIP_COMPRESSION_DESC="Compress buffered output if supported."
 COM_CONFIG_FIELD_GZIP_COMPRESSION_LABEL="Gzip Page Compression"
 COM_CONFIG_FIELD_HELP_SERVER_DESC="Select the name of the help server from which your system will collect the help screen displays."
 COM_CONFIG_FIELD_HELP_SERVER_LABEL="Help Server"
-COM_CONFIG_FIELD_LOG_PATH_DESC="For logging of the CMS. Please specify a folder."
+COM_CONFIG_FIELD_LOG_PATH_DESC="For logging of the hub and its extensions. Please specify a folder."
 COM_CONFIG_FIELD_LOG_PATH_LABEL="Path to Log Folder"
 COM_CONFIG_FIELD_API_ENABLE_DESC="Enable HUBzero API Web Service"
 COM_CONFIG_FIELD_API_ENABLE_LABEL="Enable HUBzero API Web Services"
@@ -199,7 +203,7 @@ COM_CONFIG_FIELD_VALUE_SSL="SSL"
 COM_CONFIG_FIELD_VALUE_SYSTEM_DEFAULT="System Default"
 COM_CONFIG_FIELD_VALUE_TLS="TLS"
 COM_CONFIG_FTP_DETAILS="FTP Login Details"
-COM_CONFIG_FTP_DETAILS_TIP="For updating your config files, the hub will most likely need your FTP account details. Please enter them in the form fields below."
+COM_CONFIG_FTP_DETAILS_TIP="For updating your configuration files, the hub will most likely need your FTP account details. Please enter them in the form fields below."
 COM_CONFIG_FTP_SETTINGS="FTP Settings"
 COM_CONFIG_GLOBAL_CONFIGURATION="Global Configuration"
 COM_CONFIG_HELPREFRESH_SUCCESS="The Help Sites list has been refreshed."
