[COM_CART][COM_STOREFRONT] Adding basic search to a few views.

--- a/core/components/com_storefront/admin/language/en-GB/en-GB.com_storefront.ini
+++ b/core/components/com_storefront/admin/language/en-GB/en-GB.com_storefront.ini
@@ -197,3 +197,6 @@ COM_STOREFRONT_ERROR_IMG_MIN_WIDTH="Image should be at least 450px."
 COM_STOREFRONT_ERROR_FILE_MOVE_FAILED="Move file failed"
 COM_STOREFRONT_ERROR_UNABLE_TO_DELETE_DIRECTORY="Unable to remove directory."
 COM_STOREFRONT_ERROR_MISSING_DIRECTORY="Missing directory."
+
+; Filters
+COM_STOREFRONT_FILTER_TYPE="- Type -"
