--- a/core/components/com_storefront/admin/language/en-GB/en-GB.com_storefront.ini
+++ b/core/components/com_storefront/admin/language/en-GB/en-GB.com_storefront.ini
@@ -157,6 +157,8 @@ COM_STOREFRONT_CONFIG_PRODUCT_ACCESS="Product Access Control"
 COM_STOREFRONT_CONFIG_PRODUCT_ACCESS_DESC="Select the method use for access to products. 'Access levels' is the default behavior used by the majority of the CMS. 'Access groups' allows for more fine-grained control by specifying the explicit access groups a user must be apart of in order to purchase a product."
 COM_STOREFRONT_CONFIG_PRODUCT_ACCESS_LEVELS="Access levels"
 COM_STOREFRONT_CONFIG_PRODUCT_ACCESS_GROUPS="Access groups"
+COM_STOREFRONT_CONFIG_QUANTITY_TEXT="Quantity Text"
+COM_STOREFRONT_CONFIG_QUANTITY_TEXT_DESC="Customize the text used for the number of items to be purchased. Defaults to 'Quantity' if nothing is entered."
 
 ; Uploader
 COM_STOREFRONT_FILES="Files"
